--- a/readme
+++ b/readme
@@ -1,3 +1,10 @@
 #Comando Docker
 docker build -t app_net7:1.0 -f act_Application/Dockerfile .
 docker run --name act_Application -d -p 8080:80 app_net7:1.0  
+
+* Como ejecutar?
+Primero se debe ejecutar la base de datos y cargar los datos
+docker-compose up -d bd_application
+La estructura de la BD se encuentra en la carpeta sql en un archivo de nombre "EstructuraBD", ahi esta la estructura de la BD con tablas, relaciones e injeccion de Datos.
+Ejecutarla para luego ejecutar la app.
+docker-compose up -d app_application
